kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ha-devops-service

spec:
  selector:
    app: ha-devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
